--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      contact:9432943924923
+      <a class="header-email" href="mailto:leonov.e.it@gmail.com">leonov.e.it@gmail.com</a>
+      <a class ="header-phone"href="tel:+79779741608">+79779741608</a>
       </div>
     </header>
 
@@ -21,24 +22,42 @@
 
     <section class="intro">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+        <img src="files/user.jpg" width="928" height="536" alt="Здесь должно быть Фото">
+      </figure>
       <h3><div class="container">Пара слов о себе</div></h3>
-      <p>Текст с парой слов о себе.</p>
-      <h3>Чем могу быть полезен</h3>
-      <p>Текст о том, чем могу быть полезен.</p>
+      <p><div class="container">Текст с парой слов о себе</div></p>
+      <h3><div class="container">Чем могу быть полезен</div></h3>
+      <p><div class="container">Текст о том, чем могу быть полезен</div></p>
+      <div class="container skills">
+        <h3>Мои навыки</h3>
+        <dl class="skills-list">
+          <dt class="skill-html">HTML</dt>
+          <dd class="level"><div style="width: 60%;">60%</div></dd>
+          <dt class="skill-css">CSS</dt>
+          <dd class="level"><div style="width: 40%;">40%</div></dd>
+        </dl>
+      </div>
     </section>
 
     <section class="portfolio">
       <h2 class="subheading"><div class="container">Мои работы</div></h2>
-
+    <figure class="project-image">
+      <img src="files/project.jpg" width="928" height="536" alt="Сайт магазина товаров для дома">
+    </figure>
       <h3><div class="container">Магазин товаров для дома</div></h3>
       <p><div class="container">Мой первый сайт.</div></p>
-
-      <h3>Блог начинающего верстальщика</h3>
-      <p>Статический блог про обучение HTML и CSS.</p>
+    <div class="container"> <a class="button" href="source/project/index.html">Открыть страницу</a></div>
+      <h3><div class="container">Блог начинающего верстальщика</div></h3>
+      <p><div class="container">Статический блог про обучение HTML и CSS.</div></p>
     </section>
 
     <footer class="page-footer">
-      <div class="container"> Контакты в подвале </div>
+      <div class="container">
+        <a class="footer-email"
+        href="mailto:leonov.e.it@gmail.com">leonov.e.it@gmail.com </a>
+        <a class="footer-phone" href="tel:+79779741608">+79779741608</a>
+      </div>
     </footer>
   </body>
 </html>
